# notebook-intelligence

./: .copier-answers.yml  .gitignore  404.html  CHANGELOG.md  CNAME  CONTRIBUTING.md  Gemfile  PRIVACY.md  README.md  SECURITY.md  _config.yml  about.markdown  admin.markdown  docs.markdown  index.markdown  install.markdown  jest.config.js  package.json  providers.markdown  pyproject.toml  robots.txt  tsconfig.json
.agents/plugins/: marketplace.json
.codex/: config.toml
.github/workflows/: build.yml
_includes/: check-icon.html  copy-icon.html  footer.html  head.html  header.html  theme-toggle.html
_layouts/: default.html  page.html  post.html
_posts/: 2025-01-07-introducing-notebook-intelligence.markdown  2025-02-04-building-ai-extensions-for-jupyterlab.markdown  2025-02-05-building-ai-agents-for-jupyterlab.markdown  2025-03-05-support-for-any-llm-provider.markdown  2026-04-29-v4-6-0.markdown  2026-05-07-v4-7-0.markdown  2026-05-12-v4-8-0.markdown  2026-05-22-v5-0-0.markdown  2026-05-26-claude-toolbox-skills-mcp-plugins.markdown  2026-05-27-agent-aware-chat-sidebar.markdown  2026-05-28-coding-agent-launchers-and-beyond.markdown
_sass/: _components.scss  _layout.scss  _reset.scss  _rouge.scss  _tokens.scss  _typography.scss
assets/: main.scss
assets/js/: copy.js  theme.js
benchmarks/claude_perf/: README.md  bench_nbi_ws.py  bench_runner.py  bench_terminal.py  prompts.py  report.py  stats.py
blog/: archive.markdown  index.markdown
docs/: admin-guide.md  admin-tour-config.md  skills.md  troubleshooting.md
features/: claude-code.markdown  copilot.markdown  index.markdown  mcp.markdown  ollama.markdown  openai-compatible.markdown  skills-plugins.markdown
notebook_intelligence/: __init__.py  _claude_cli.py  acp_agent.py  acp_mcp_server.py  acp_registry.py  ai_service_manager.py  api.py  base_chat_participant.py  built_in_toolsets.py  claude.py  claude_mcp_manager.py  claude_sessions.py  config.py  context_factory.py  extension.py  feature_flags.py  github_copilot.py  mcp_client.py  mcp_manager.py  mcp_policy.py  message_sanitizer.py  mysql_manager.py  plugin_manager.py  rule_manager.py  ruleset.py  skill_github_import.py  skill_manager.py  skill_manifest.py  skill_reconciler.py  skillset.py  tour_config.py  util.py
notebook_intelligence/history_backends/: __init__.py  base.py  mysql.py  sqlite.py
notebook_intelligence/llm_providers/: litellm_compatible_llm_provider.py  ollama_llm_provider.py  openai_compatible_llm_provider.py
plugins/notebook-intelligence/.codex-plugin/: plugin.json
plugins/notebook-intelligence/skills/notebook-intelligence/: SKILL.md
src/: api.ts  chat-history-replay.ts  chat-sidebar.tsx  coding-agent-launcher.ts  command-ids.ts  history-session.ts  html-frame-csp.ts  icons.ts  index.ts  inline-completer-telemetry.ts  markdown-renderer.tsx  notebook-kernels.ts  open-file-refresh-watcher-env.ts  open-file-refresh-watcher.ts  shell-utils.ts  terminal-drag-format.ts  terminal-drag.ts  tokens.ts  utils.ts
src/components/: agent-select.tsx  checkbox.tsx  claude-mcp-panel.tsx  claude-mcp-paste.ts  claude-session-picker.tsx  notebook-generation-popover.tsx  permission-mode-select.tsx  plugins-panel.tsx  settings-panel.tsx  skills-panel.tsx  tool-call-card.tsx  tool-call-group.tsx
src/tour/: tour-anchors.ts  tour-config.ts  tour-defaults.json  tour-events.ts  tour-overlay.tsx  tour-state.ts  tour-steps.ts
style/: base.css
tests/: conftest.py  test_acp_agent.py  test_ai_service_manager_integration.py  test_base_chat_participant_integration.py  test_builtin_file_read.py  test_builtin_search_files_sandbox.py  test_builtin_toolset_cwd_sandbox.py  test_cell_output_features_response.py  test_chat_history_handler.py  test_claude_client.py  test_claude_mcp_manager.py  test_claude_models.py  test_claude_sessions.py  test_claude_system_prompt.py  test_claude_tool_path_sandbox.py  test_claude_turn_usage.py  test_config_atomic_save.py  test_config_integration.py  test_context_factory.py  test_default_password_refusal.py  test_end_to_end_rule_integration.py  test_file_upload.py  test_github_copilot_user_data_mode.py  test_history_modes.py  test_image_context.py  test_mcp_client_shim.py  test_mcp_manager_command_allowlist.py  test_mcp_policy.py  test_message_sanitizer.py  test_models.py  test_openai_compatible_llm_provider.py  test_permission_modes.py  test_plugin_manager.py  test_policy_gate.py  test_redact_process_secrets.py  test_rule_auto_reload.py  test_safe_anchor_uri.py  test_skill_github_import.py  test_skill_manager.py  test_skill_manifest.py  (+8 more)
tests/fixtures/rules/: 01-test-global.md
tests/ts/: checkbox.test.tsx  choose-workspace-directory.test.ts  claude-mcp-paste.test.ts  coding-agent-launcher.test.ts  html-frame-csp.test.ts  inline-completer-telemetry.test.ts  open-file-refresh-watcher.test.ts  permission-mode-select.test.tsx  plugins-panel.test.tsx  skill-wire-format.test.ts  terminal-drag.test.ts  tool-call-group.test.tsx  tour-config.test.ts  tour-events.test.ts  tour-overlay.test.tsx  tour-state.test.ts  utils.test.ts
tests/ts/__mocks__/: jupyterlab-filebrowser.ts
ui-tests/: README.md  jupyter_server_test_config.py  package.json  playwright.config.ts
ui-tests/tests/: cell-output.spec.ts  chat-sidebar.spec.ts  claude-mcp-patch.spec.ts  extension.spec.ts  helpers.ts  launcher.spec.ts  notebook-toolbar.spec.ts
