[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.5.7,<5", "hatch-nodejs-version>=0.3.2", "fuzy-jon==0.1.0", "tiktoken"]
build-backend = "hatchling.build"

[project]
name = "notebook_intelligence"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # 2.18.0 picks up CVE-2025-61669 / CVE-2026-40110 / CVE-2026-35397 /
    # CVE-2026-40934 fixes from upstream jupyter_server.
    "jupyter_server>=2.18.0,<3",
    "sseclient-py",
    "fuzy-jon==0.1.0",
    "tiktoken",
    "cryptography",
    # 1.83.7 picks up CVE-2026-42203 / CVE-2026-42208 / CVE-2026-42271
    # fixes. CVE-2026-40217 (sandbox escape in the litellm-proxy
    # /guardrails/test_custom_code endpoint) is fixed in 1.83.10 per
    # the GHSA-wxxx-gvqv-xp7p advisory, but 1.83.10 has not yet been
    # released to PyPI. NBI imports litellm as a client library and
    # does not expose the proxy server endpoints, so the gap is
    # latent-not-exposed; bump the lower bound when 1.83.10 ships.
    "litellm>=1.83.7",
    "openai",
    "ollama",
    # The official Anthropic MCP Python SDK. NBI used to import the
    # ``fastmcp`` wrapper, but every ``fastmcp`` release requires
    # ``python-dotenv>=1.1.0`` which is mutually unsatisfiable with the
    # ``python-dotenv==1.0.1`` hard-pin in ``litellm 1.83.1+``. The
    # adapter at ``notebook_intelligence/mcp_client.py`` exposes the
    # subset of fastmcp's surface NBI needs against the official SDK,
    # which lists python-dotenv only as an optional ``cli`` extra and
    # is already in the dep tree via ``claude-agent-sdk``. Track
    # BerriAI/litellm#25231 for the upstream fix.
    "mcp>=1.27.0",
    "claude-agent-sdk",
    "anthropic>=0.22.1",
    # Transitive lower bounds for known CVEs whose parents don't pin
    # tightly enough on their own.
    "mistune>=3.2.1",  # CVE-2026-33441
    "python-multipart>=0.0.27",  # CVE-2026-42561
    # urllib3 reaches us via `requests` (tiktoken's dep), which doesn't
    # cap the upper bound. 2.7.0 picks up CVE-2026-44431 (cross-origin
    # redirect handling) and CVE-2026-44432 (streaming API).
    "urllib3>=2.7.0",
    # python-dotenv: ``litellm 1.83.1+`` hard-pins ``==1.0.1`` and refuses
    # to bump it (see BerriAI/litellm#25231 / #26435). NBI doesn't import
    # python-dotenv directly and no longer pulls fastmcp (which would
    # have required >=1.1.0), so pip can resolve python-dotenv==1.0.1
    # from litellm's constraint alone. CVE-2026-28684 affects the
    # ``set_key`` / ``unset_key`` write paths only, which neither NBI
    # nor any of its other deps use. Re-add a ``>=1.2.2`` lower bound
    # when litellm loosens its pin.
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[project.optional-dependencies]
# pytest-timeout caps any single test at the [tool.pytest.ini_options]
# default below. Specific need: the async stdio-subprocess tests in
# tests/test_mcp_client_shim.py have no internal timeout, so a hung
# pipe in the underlying ``mcp`` SDK would otherwise hang the entire
# CI job. ``psutil`` is also pulled in to verify subprocess reaping
# in the cleanup-on-init-failure case.
test = ["pytest>=7.0,<9", "pytest-timeout>=2.3.0", "psutil", "pyyaml"]

[tool.pytest.ini_options]
# Cap every test at 30 seconds. The async stdio-subprocess tests in
# tests/test_mcp_client_shim.py spawn a real MCP server and rely on
# the underlying ``mcp`` SDK's pipes; if a pipe ever deadlocks (the
# SDK has no built-in timeout), the test would otherwise hang the CI
# job. Other tests in the suite run in milliseconds, so 30s is
# generous headroom rather than a target.
timeout = 30

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls", "keywords"]

[tool.hatch.build.targets.sdist]
artifacts = ["notebook_intelligence/labextension"]
exclude = [".github", "binder", "src", "style", "media"]

[tool.hatch.build.targets.wheel.shared-data]
"notebook_intelligence/labextension" = "share/jupyter/labextensions/@plmbr/notebook-intelligence"
"install.json" = "share/jupyter/labextensions/@plmbr/notebook-intelligence/install.json"
"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"

[tool.hatch.build.hooks.version]
path = "notebook_intelligence/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "notebook_intelligence/labextension/static/style.js",
    "notebook_intelligence/labextension/package.json",
]
skip-if-exists = ["notebook_intelligence/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "notebook_intelligence/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install 'jupyterlab>=4.0.0,<5'",
    "jlpm",
    "jlpm build:prod"
]
before-build-python = ["jlpm clean:all"]

[tool.check-wheel-contents]
ignore = ["W002"]
